# EdgeAI_CPP

./: CMakeLists.txt  README.md
edgeai_cpp/include/edgeai_cpp/: tflite_model.h  utils.h
edgeai_cpp/src/: tflite_model.cpp  utils.cpp
examples/: tflite_inference.cpp
